# new-api

./: .gitignore  Dockerfile  README.md  REAdME.md  docker-compose.yml  main.py  news.db  pyproject.toml  setup.cfg
app/: main.py  models.py  schemas.py  utils.py
app/models/: __init__.py  article.py  model.py
app/routers/: articles.py  comments.py
app/schemas/: article.py  comment.py
migrations/models/: 0_20211210123311_init.sql
tests/: test_app.py
