[tool.poetry]
name = "newsman"
version = "0.1.0"
description = "A news API built with FastAPI"
authors = ["Daniel Boadzie <boadziedaniel43@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
